--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "joi": "^17.4.0",
     "jose": "^2.0.5",
     "on-headers": "^1.0.2",
-    "openid-client": "^4.0.0",
+    "openid-client": "https://github.com/jjpaulino/openid-client.git",
     "p-memoize": "^4.0.0",
     "url-join": "^4.0.1"
   },
